# rbar

./: Cargo.toml  crates.nix  flake.nix
macros/: Cargo.toml
macros/src/: lib.rs
src/: app.rs  config.rs  main.rs  module.rs  util.rs  widget.rs
src/module/: audio.rs  battery.rs  clock.rs  new.rs
src/module/new/: clock.rs
