[package]
name = "macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = { version = "0.20.10", features = ["diagnostics", "suggestions"] }
manyhow = { version = "0.11.4", features = ["darling"] }
proc-macro2 = { version = "1.0.87", features = ["nightly", "span-locations"] }
quote = "1.0.37"
syn = { version = "2.0.79", features = ["full", "extra-traits"] }
